# csc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cscCode.code-workspace  eseCode.code-workspace  target.c
.github/workflows/: build_and_test.yml  cmake.yml
app/: CMakeLists.txt  app_1.c  app_1.h  app_measurement.c  app_measurement.h  app_process.c  app_process.h
hal/: CMakeLists.txt  hal_1.c  hal_1.h  hal_io.c  hal_io.h
os/: CMakeLists.txt  os_rtos.c  os_rtos.h
test/: CMakeLists.txt
test/app/: CMakeLists.txt  test_app_1.cpp  test_app_main.cpp  test_app_process.cpp  test_app_process_modern.cpp
test/fakes/hal/: hal_1_fake.c  hal_1_fake.h  hal_io_fake.c  hal_io_fake.cpp  hal_io_fake.h  hal_io_fake.hpp
test/fakes/os/: os_rtos_fake.c  os_rtos_fake.cpp  os_rtos_fake.h  os_rtos_fake.hpp
test/lib/: fff.h  fff_wrapper.h
